<resources>
    <string name="app_name">LoginMVP</string>
    <string name="signin">SignIn</string>
    <string name="fullname">FullName</string>
    <string name="username">Username</string>
    <string name="password">SignIn</string>
    <string name="newaccount">Create New</string>
    <string name="form">Form</string>
    <string name="signup">SignUp</string>
    <string name="gotosignin">Go to SignIn</string>
    <string name="setting">Setting</string>
</resources>
